--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<h1>hello world</h1>
-
+<h1 id="demo">hello world</h1>
+<script>
+document.getElementById("demo").innerHTML = "Hello JavaScript!";
+</script>
