--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<h1 id="demo">hello world</h1>
-<script>
-document.getElementById("demo").innerHTML = "Hello JavaScript!";
-</script>
+<head>
+	<title>Bruh</title>
+</head>
+<body>
+	
+	<h1>I HATE SCHOOOL</h1>
+	<p>COCK COCK COCK COCK COCK</p>
+	<p id="bruh"> </p>
+	<script>
+	let b = 1
+	let a = document.getElementById("bruh")
+	while(true){
+		b++
+		a.innerHTML = b
+	}
+	</script>
+</body>
